--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0, 0, 0, 0.829)),url('./assets/fondo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+.textWhite{
+    color: white;
+
+}
